[project]
name = "hi_monk"
version = "0.7.0"
description = "Default template for PDM package"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
hi-monk = "hi_monk.hello:hi"
#script = package.pyfile:function_name

[tool.pdm]
distribution = true
